--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,12 @@
   }
 }
 
+input{
+  color: white important!;
+}
+
 .App-header {
-  background-color: #282c34;
+  background-color: orange;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
